Fix build and crash